# bigfish-smallfish

./: .gitignore  install_docker_if_missing.sh  run_frontend_new_and_backend.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: config.py  crud.py  main.py  models.py  schemas.py
backend/app/services/: blog_drafts.py  discovery_insights.py  mataroa_publisher.py  monitoring.py  openai_content.py  opportunity_engine.py  orchestrator.py  persona.py  prompt_templates.py  tinyfish.py
backend/migrations/: README
backend/migrations/versions/: 20260328_0001_create_runs_table.py  20260328_0002_create_research_job_tables.py  20260328_0003_create_blog_draft_tables.py  20260328_0004_add_persona_post_fields.py  20260328_0005_add_opportunity_tables.py  20260328_0005_add_origin_endpoint_to_blog_drafts.py  20260328_0006_add_monitor_tables.py  20260328_0007_add_client_profile_to_research_jobs.py  20260328_0008_add_origin_endpoint_to_blog_drafts.py
frontend-new/: package-lock.json  package.json
frontend-new/app/: globals.css  layout.tsx  page.tsx
frontend-new/components/: ui.tsx  workspace-intake.tsx  workspace-page.tsx  workspace-provider.tsx  workspace-shell.tsx
frontend-new/lib/: api.ts  types.ts  workspace-builders.ts  workspaces.ts
frontend-newest/: package-lock.json  package.json
frontend-newest/app/: globals.css  layout.tsx
frontend-newest/components/: app-shell.tsx
frontend-newest/lib/: api.ts  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  (+1 more)
(+3 files in other folders)
